--- a/pricing/index.html
+++ b/pricing/index.html
@@ -5,7 +5,7 @@
 <title>Preisübersicht</title>
 
 
-  <link rel="shortcut icon" href="https://horobetzs/horobetzs.github.io/images/favicon.png" type="image/png"
+  <link rel="shortcut icon" href="https://horobetzs.github.io/images/favicon.png" type="image/png"
 />
 
 
@@ -20,11 +20,11 @@
 <meta name="MobileOptimized" content="320" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<link rel="stylesheet" href="https://horobetzs/horobetzs.github.io/css/screen.css" />
-<link rel="stylesheet" href="https://horobetzs/horobetzs.github.io/css/fonts.css" type="text/css" />
+<link rel="stylesheet" href="https://horobetzs.github.io/css/screen.css" />
+<link rel="stylesheet" href="https://horobetzs.github.io/css/fonts.css" type="text/css" />
 <link
   rel="stylesheet"
-  href="https://horobetzs/horobetzs.github.io/fork-awesome/css/fork-awesome.min.css"
+  href="https://horobetzs.github.io/fork-awesome/css/fork-awesome.min.css"
   type="text/css"
 />
 
@@ -32,12 +32,12 @@
 <meta property="og:description" content="Blumensträuße &amp; Einzelblumen Straußgröße Preis klein 3€ Mittel 5€ Groß 7€ Blume Preis Sonnenblume 1€ Unbekannt 5€ Unbeaknnt 7€ Hier soll dann noch aufgeschrieben werden, was auf den Schildern in der Hütte steht.
 Gemüse Gemüse Menge Preis Tomaten Schale ca. 1kg 2,50€ Zwiebeln Schale ca. 1kg 2,00€ Zucchini Pro Stück 0,50€ Rote Beete Pro Stück 0,50€ Mangold Pro Bund 1,50€ Unser Gemüse ist ungespritzt und ausschließlich organisch gedüngt worden." />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https://horobetzs/horobetzs.github.io/pricing/" /><meta property="og:image" content="https://horobetzs/horobetzs.github.io/images/cover-image.jpg"/><meta property="article:section" content="" />
+<meta property="og:url" content="https://horobetzs.github.io/pricing/" /><meta property="og:image" content="https://horobetzs.github.io/images/cover-image.jpg"/><meta property="article:section" content="" />
 
 <meta property="og:site_name" content="Blumen, Gemüse &amp; mehr - Bluemenfeld Visang" />
 
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://horobetzs/horobetzs.github.io/images/cover-image.jpg"/>
+<meta name="twitter:image" content="https://horobetzs.github.io/images/cover-image.jpg"/>
 
 <meta name="twitter:title" content="Preisübersicht"/>
 <meta name="twitter:description" content="Blumensträuße &amp; Einzelblumen Straußgröße Preis klein 3€ Mittel 5€ Groß 7€ Blume Preis Sonnenblume 1€ Unbekannt 5€ Unbeaknnt 7€ Hier soll dann noch aufgeschrieben werden, was auf den Schildern in der Hütte steht.
@@ -47,7 +47,7 @@ Gemüse Gemüse Menge Preis Tomaten Schale ca. 1kg 2,50€ Zwiebeln Schale ca. 1
 <meta itemprop="description" content="Blumensträuße &amp; Einzelblumen Straußgröße Preis klein 3€ Mittel 5€ Groß 7€ Blume Preis Sonnenblume 1€ Unbekannt 5€ Unbeaknnt 7€ Hier soll dann noch aufgeschrieben werden, was auf den Schildern in der Hütte steht.
 Gemüse Gemüse Menge Preis Tomaten Schale ca. 1kg 2,50€ Zwiebeln Schale ca. 1kg 2,00€ Zucchini Pro Stück 0,50€ Rote Beete Pro Stück 0,50€ Mangold Pro Bund 1,50€ Unser Gemüse ist ungespritzt und ausschließlich organisch gedüngt worden.">
 
-<meta itemprop="wordCount" content="89"><meta itemprop="image" content="https://horobetzs/horobetzs.github.io/images/cover-image.jpg"/>
+<meta itemprop="wordCount" content="89"><meta itemprop="image" content="https://horobetzs.github.io/images/cover-image.jpg"/>
 <meta itemprop="keywords" content="" />
 
 
@@ -67,19 +67,19 @@ Gemüse Gemüse Menge Preis Tomaten Schale ca. 1kg 2,50€ Zwiebeln Schale ca. 1
 <link
   rel="apple-touch-icon"
   sizes="180x180"
-  href="https://horobetzs/horobetzs.github.io/images/apple-touch-icon.png"
+  href="https://horobetzs.github.io/images/apple-touch-icon.png"
 />
 <link
   rel="icon"
   type="image/png"
   sizes="32x32"
-  href="https://horobetzs/horobetzs.github.io/images/favicon-32x32.png"
+  href="https://horobetzs.github.io/images/favicon-32x32.png"
 />
 <link
   rel="icon"
   type="image/png"
   sizes="16x16"
-  href="https://horobetzs/horobetzs.github.io/images/favicon-16x16.png"
+  href="https://horobetzs.github.io/images/favicon-16x16.png"
 />
 <body>
   <main class="content page-template page-" role="main">
@@ -225,11 +225,11 @@ Gemüse Gemüse Menge Preis Tomaten Schale ca. 1kg 2,50€ Zwiebeln Schale ca. 1
   </div>
 </footer>
 
-    <script type="text/javascript" src='https://horobetzs/horobetzs.github.io/js/jquery-3.6.0.min.js'></script>
+    <script type="text/javascript" src='https://horobetzs.github.io/js/jquery-3.6.0.min.js'></script>
 
     
-    <script type="text/javascript" src='https://horobetzs/horobetzs.github.io/js/icons.js'></script>
-    <script type="text/javascript" src='https://horobetzs/horobetzs.github.io/js/index.js'></script>
+    <script type="text/javascript" src='https://horobetzs.github.io/js/icons.js'></script>
+    <script type="text/javascript" src='https://horobetzs.github.io/js/index.js'></script>
     
 </body>
 </html>
