--- a/services/index.html
+++ b/services/index.html
@@ -5,7 +5,7 @@
 <title>Weitere Eindrücke</title>
 
 
-  <link rel="shortcut icon" href="https://horobetzs/horobetzs.github.io/images/favicon.png" type="image/png"
+  <link rel="shortcut icon" href="https://horobetzs.github.io/images/favicon.png" type="image/png"
 />
 
 
@@ -20,23 +20,23 @@
 <meta name="MobileOptimized" content="320" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<link rel="stylesheet" href="https://horobetzs/horobetzs.github.io/css/screen.css" />
-<link rel="stylesheet" href="https://horobetzs/horobetzs.github.io/css/fonts.css" type="text/css" />
+<link rel="stylesheet" href="https://horobetzs.github.io/css/screen.css" />
+<link rel="stylesheet" href="https://horobetzs.github.io/css/fonts.css" type="text/css" />
 <link
   rel="stylesheet"
-  href="https://horobetzs/horobetzs.github.io/fork-awesome/css/fork-awesome.min.css"
+  href="https://horobetzs.github.io/fork-awesome/css/fork-awesome.min.css"
   type="text/css"
 />
 
 <meta property="og:title" content="Weitere Eindrücke" />
 <meta property="og:description" content=" Blumensträuße Das Feld Saisonale Kürbisse " />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https://horobetzs/horobetzs.github.io/services/" /><meta property="og:image" content="https://horobetzs/horobetzs.github.io/images/cover-image.jpg"/><meta property="article:section" content="" />
+<meta property="og:url" content="https://horobetzs.github.io/services/" /><meta property="og:image" content="https://horobetzs.github.io/images/cover-image.jpg"/><meta property="article:section" content="" />
 
 <meta property="og:site_name" content="Blumen, Gemüse &amp; mehr - Bluemenfeld Visang" />
 
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://horobetzs/horobetzs.github.io/images/cover-image.jpg"/>
+<meta name="twitter:image" content="https://horobetzs.github.io/images/cover-image.jpg"/>
 
 <meta name="twitter:title" content="Weitere Eindrücke"/>
 <meta name="twitter:description" content=" Blumensträuße Das Feld Saisonale Kürbisse "/>
@@ -44,7 +44,7 @@
 <meta itemprop="name" content="Weitere Eindrücke">
 <meta itemprop="description" content=" Blumensträuße Das Feld Saisonale Kürbisse ">
 
-<meta itemprop="wordCount" content="5"><meta itemprop="image" content="https://horobetzs/horobetzs.github.io/images/cover-image.jpg"/>
+<meta itemprop="wordCount" content="5"><meta itemprop="image" content="https://horobetzs.github.io/images/cover-image.jpg"/>
 <meta itemprop="keywords" content="" />
 
 
@@ -64,19 +64,19 @@
 <link
   rel="apple-touch-icon"
   sizes="180x180"
-  href="https://horobetzs/horobetzs.github.io/images/apple-touch-icon.png"
+  href="https://horobetzs.github.io/images/apple-touch-icon.png"
 />
 <link
   rel="icon"
   type="image/png"
   sizes="32x32"
-  href="https://horobetzs/horobetzs.github.io/images/favicon-32x32.png"
+  href="https://horobetzs.github.io/images/favicon-32x32.png"
 />
 <link
   rel="icon"
   type="image/png"
   sizes="16x16"
-  href="https://horobetzs/horobetzs.github.io/images/favicon-16x16.png"
+  href="https://horobetzs.github.io/images/favicon-16x16.png"
 />
 <body>
   <main class="content page-template page-" role="main">
@@ -124,11 +124,11 @@
   </div>
 </footer>
 
-    <script type="text/javascript" src='https://horobetzs/horobetzs.github.io/js/jquery-3.6.0.min.js'></script>
+    <script type="text/javascript" src='https://horobetzs.github.io/js/jquery-3.6.0.min.js'></script>
 
     
-    <script type="text/javascript" src='https://horobetzs/horobetzs.github.io/js/icons.js'></script>
-    <script type="text/javascript" src='https://horobetzs/horobetzs.github.io/js/index.js'></script>
+    <script type="text/javascript" src='https://horobetzs.github.io/js/icons.js'></script>
+    <script type="text/javascript" src='https://horobetzs.github.io/js/index.js'></script>
     
 </body>
 </html>
