--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div id="site-head-content" class="inner">
 
             <h1 class="blog-title">Blumenfeld Visang</h1>
-            <h1 class="blog-title">Achtung: Seite bfeindet sich im Aufbau</h1>
+            <h1 class="blog-title">Achtung: Seite befindet sich im Aufbau</h1>
             <h2 class="blog-description">Blumen, Gemüse und mehr im ländlichen Norden von Münster</h2>
 
             
